On touch overlay now working.
When user is recording, touching the screen results in a circle on the
touched position. To be used for manual tracking. Next step is to add the
touched position along with a timestamp, to a XML file.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         </activity>
 
         <activity
-            android:name=".TrackingActivity" />
+            android:name=".TrackingActivity"
+            android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
