--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings">
         </activity>
+        <activity android:name=".DebugActivity">
+        </activity>
     </application>
 
 </manifest>
